# andyterm

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: protocol-engineer.md  python-reviewer.md  test-engineer.md  ui-reviewer.md
.claude/skills/moxa-device-support/: SKILL.md
.claude/skills/pyside6-gui/: SKILL.md
.claude/skills/serial-terminal/: SKILL.md
.claude/skills/sftp-client/: SKILL.md
docs/: WEEK1_PLAYBOOK.md
src/andyterm/: __init__.py  __main__.py  app.py
src/andyterm/core/: __init__.py  serial_session.py  session_store.py  sftp_session.py  ssh_session.py
src/andyterm/moxa/: __init__.py  nport_discovery.py
src/andyterm/protocols/: __init__.py  serial_transport.py  ssh_transport.py
src/andyterm/ui/: main_window.py  session_tree.py  sftp_panel.py  terminal_widget.py
src/andyterm/ui/dialogs/: about_dialog.py  new_session_dialog.py
src/andyterm/ui/workers/: __init__.py  serial_worker.py  ssh_worker.py
src/andyterm/utils/: __init__.py
src/moxaterm/: __init__.py  __main__.py  app.py
src/moxaterm/core/: ansi_parser.py  serial_session.py  session.py  session_store.py  sftp_session.py  ssh_session.py  uboot_detector.py
src/moxaterm/moxa/: uport_info.py
src/moxaterm/protocols/: serial_transport.py  ssh_transport.py
src/moxaterm/ui/: __init__.py  main_window.py  session_tree.py  sftp_panel.py  terminal_widget.py
src/moxaterm/ui/dialogs/: __init__.py  about_dialog.py  new_session_dialog.py
src/moxaterm/ui/workers/: serial_worker.py  ssh_worker.py
tests/: conftest.py
tests/core/: test_ansi_parser.py  test_session.py  test_sessions.py
tests/integration/: test_serial_transport.py  test_ssh_transport.py
